# karoloke

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codecov.yaml  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md  karoloke.spec
.github/ISSUE_TEMPLATE/: bug_report.md  general-improvement.md  help-me-.md
.github/workflows/: ci_develop.yaml  ci_main.yaml  release.yaml
docs/: getting_started.md  index.md
docs/assets/: karoloke-icon.icns
karoloke/: jukebox_controller.py  jukebox_router.py  settings.py  start_karaoke.py  utils.py
karoloke/scripts/: playlist_database_creator.py  playlist_schema.json  playlist_schema.py
karoloke/static/: playlist.json
karoloke/templates/: player.html  playlist.html  score.html  settings.html
scripts/: playlist_database_creator.py  playlist_output_20250712_144709.json  playlist_schema.py
tests/: test_jukebox_controller.py  test_jukebox_router.py  test_start_karaoke.py  test_utils.py
